--- a/app/src/main/res/drawable/round_edittext_bg.xml
+++ b/app/src/main/res/drawable/round_edittext_bg.xml
@@ -1,7 +1,20 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#F08A5D"/>
-    <corners android:radius="50dp"/>
+    <!-- Focused state -->
+    <item android:state_focused="true">
+        <shape android:shape="rectangle">
+            <stroke android:width="2dp" android:color="#B83B5E" />
+            <solid android:color="#F08A5D" />
+            <corners android:radius="50dp" />
+        </shape>
+    </item>
 
-</shape>
+    <!-- Normal state -->
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#F08A5D" />
+            <corners android:radius="50dp" />
+        </shape>
+    </item>
+
+</selector>
