--- a/app/src/main/res/layout/activity_attendance.xml
+++ b/app/src/main/res/layout/activity_attendance.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:id="@+id/header_LinearLayout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:background="#B83B5E"
         android:orientation="horizontal">
 
@@ -29,11 +29,17 @@
             android:layout_width="10dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:gravity="center"
             android:text="Campus Connect"
             android:textColor="#F9ED69"
             android:textSize="20sp" />
+
+        <AnalogClock
+            android:id="@+id/analog_clock"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.25"/>
     </LinearLayout>
 
     <!--Body-->
