--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,11 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/headerLogo_ImageView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.25"
-            app:srcCompat="@drawable/campus_connect_logo" />
+        android:id="@+id/headerLogo_ImageView"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.25"
+        app:srcCompat="@drawable/campus_connect_logo" />
 
         <TextView
             android:id="@+id/headerText_TextView"
@@ -45,7 +45,6 @@
     <!--Body-->
     <LinearLayout
             android:id="@+id/body_LinearLayout"
-            layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
