--- a/app/src/main/res/layout/activity_log_in_attendance.xml
+++ b/app/src/main/res/layout/activity_log_in_attendance.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/layoutbackground"
-    tools:context=".logInAttendance"
+    tools:context=".LogInAttendance"
     android:orientation="vertical">
 
     <!--Header-->
@@ -17,10 +17,18 @@
         android:background="#B83B5E"
         android:orientation="horizontal">
 
+        <ImageButton
+            android:id="@+id/backButton_ImageButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.25"
+            android:background="#B83B5E"
+            app:srcCompat="?attr/actionModeCloseDrawable" />
+
         <ImageView
             android:id="@+id/headerLogo_ImageView"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="0.25"
             app:srcCompat="@drawable/campus_connect_logo" />
 
