--- a/app/src/main/res/layout/activity_generate.xml
+++ b/app/src/main/res/layout/activity_generate.xml
@@ -72,26 +72,64 @@
             android:textColor="#6A2C70"
             android:textSize="20sp"/>
 
-        <EditText
-            android:id="@+id/id_EditText"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="30px"
-            android:hint="Enter ID Number"
-            android:textColor="#6A2C70"
-            android:inputType="number"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:background="@drawable/round_edittext_bg"
-            android:padding="16dp"/>
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/qrCode_ImageView"
+            <EditText
+                android:id="@+id/id_EditText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.80"
+                android:layout_marginTop="30px"
+                android:layout_marginBottom="30px"
+                android:hint="Enter ID Number"
+                android:textColor="#6A2C70"
+                android:inputType="number"
+                android:textSize="30sp"
+                android:textAlignment="center"
+                android:background="@drawable/round_edittext_bg"
+                android:padding="16dp"/>
+
+            <ImageButton
+                android:id="@+id/scanQR_ImageButton"
+                android:layout_width="10dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.20"
+                android:layout_marginRight="30px"
+                android:layout_marginTop="30px"
+                android:layout_marginBottom="30px"
+                android:adjustViewBounds="true"
+                android:background="@color/zxing_transparent"
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/scanqrbutton" />
+
+        </LinearLayout>
+
+            <ImageView
+                android:id="@+id/qrCode_ImageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="50dp"
+                android:adjustViewBounds="true"
+                android:clickable="true"
+                android:layout_gravity="center"
+                android:background="@drawable/table_border"/>
+
+        <TextView
+            android:id="@+id/generateQR_TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:clickable="true"
-            tools:srcCompat="@tools:sample/avatars"/>
+            android:layout_gravity="center"
+            android:elevation="1dp"
+            android:padding="4dp"
+            android:text="Your QR Code will appear here"
+            android:textAlignment="center"
+            android:textColor="#6A2C70"
+            android:textSize="15sp"/>
+
+
 
 
     </LinearLayout>
