--- a/app/src/main/res/layout/activity_scan_qr.xml
+++ b/app/src/main/res/layout/activity_scan_qr.xml
@@ -1,16 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/previewLayout"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LogInAttendance">
+    android:orientation="vertical"
+    android:gravity="center">
 
     <SurfaceView
-        android:id="@+id/cameraPreview"
+        android:id="@+id/cameraSurfaceView"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/viewDivider"/>
+
+    <View
+        android:id="@+id/viewDivider"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-
-</FrameLayout>
+        android:layout_height="4dp"
+        android:background="@color/black"
+        app:layout_constraintBaseline_toBottomOf="@+id/cameraSurfaceView"
+        app:layout_constraintBottom_toTopOf="@+id/textScanResult"/>
+    
+    <TextView
+        android:id="@+id/textScanResult"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="parent"/>
+</LinearLayout>
