--- a/app/src/main/res/layout/activity_scan_qr.xml
+++ b/app/src/main/res/layout/activity_scan_qr.xml
@@ -5,31 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     android:gravity="center">
 
     <SurfaceView
         android:id="@+id/cameraSurfaceView"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/viewDivider"/>
-
-    <View
-        android:id="@+id/viewDivider"
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:background="@color/black"
-        app:layout_constraintBaseline_toBottomOf="@+id/cameraSurfaceView"
-        app:layout_constraintBottom_toTopOf="@+id/textScanResult"/>
+        android:background="@drawable/cell_shape"/>
     
     <TextView
         android:id="@+id/textScanResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="parent"/>
+        android:text="ID Number will appear here"/>
 </LinearLayout>
