--- a/app/src/main/res/layout/activity_scan_qr.xml
+++ b/app/src/main/res/layout/activity_scan_qr.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
     android:gravity="center">
 
     <SurfaceView
@@ -13,7 +12,8 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:background="@drawable/cell_shape"/>
-    
+
+
     <TextView
         android:id="@+id/textScanResult"
         android:layout_width="match_parent"
@@ -23,5 +23,5 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:padding="16dp"
-        android:text="ID Number will appear here"/>
+        android:text="Scan QR Code"/>
 </LinearLayout>
