Hamburger Button added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,8 +50,9 @@
 
         <ImageButton
             android:id="@+id/hamburger_ImageButton"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="0.25"
             android:background="#00000000"
             android:src="@drawable/hamburger"/>
 
